mlirfuzz/crashed/temp41354756394754015488.mlir6868868233598503938.log
generated/temp41354756394754015488.mlir:89:11: error: Test iterating `int64_t`: unable to iterate type
    %22 = vector.broadcast %true_4 : i1 to vector<27xi1>
          ^
generated/temp41354756394754015488.mlir:89:11: note: see current operation: %0 = "arith.constant"() <{value = dense<true> : vector<27xi1>}> : () -> vector<27xi1>
generated/temp41354756394754015488.mlir:89:11: error: Test iterating `uint64_t`: unable to iterate type
    %22 = vector.broadcast %true_4 : i1 to vector<27xi1>
          ^
generated/temp41354756394754015488.mlir:89:11: note: see current operation: %0 = "arith.constant"() <{value = dense<true> : vector<27xi1>}> : () -> vector<27xi1>
generated/temp41354756394754015488.mlir:89:11: error: Test iterating `APInt`: -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1
    %22 = vector.broadcast %true_4 : i1 to vector<27xi1>
          ^
generated/temp41354756394754015488.mlir:89:11: note: see current operation: %0 = "arith.constant"() <{value = dense<true> : vector<27xi1>}> : () -> vector<27xi1>
generated/temp41354756394754015488.mlir:89:11: error: Test iterating `IntegerAttr`: true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true
    %22 = vector.broadcast %true_4 : i1 to vector<27xi1>
          ^
generated/temp41354756394754015488.mlir:89:11: note: see current operation: %0 = "arith.constant"() <{value = dense<true> : vector<27xi1>}> : () -> vector<27xi1>
generated/temp41354756394754015488.mlir:87:11: error: Test iterating `int64_t`: unable to iterate type
    %20 = vector.broadcast %cst_7 : f16 to vector<1xf16>
          ^
generated/temp41354756394754015488.mlir:87:11: note: see current operation: %1 = "arith.constant"() <{value = dense<2.129600e+04> : vector<1xf16>}> : () -> vector<1xf16>
generated/temp41354756394754015488.mlir:87:11: error: Test iterating `uint64_t`: unable to iterate type
    %20 = vector.broadcast %cst_7 : f16 to vector<1xf16>
          ^
generated/temp41354756394754015488.mlir:87:11: note: see current operation: %1 = "arith.constant"() <{value = dense<2.129600e+04> : vector<1xf16>}> : () -> vector<1xf16>
generated/temp41354756394754015488.mlir:87:11: error: Test iterating `APInt`: unable to iterate type
    %20 = vector.broadcast %cst_7 : f16 to vector<1xf16>
          ^
generated/temp41354756394754015488.mlir:87:11: note: see current operation: %1 = "arith.constant"() <{value = dense<2.129600e+04> : vector<1xf16>}> : () -> vector<1xf16>
mlir-opt: /home/jacob/projects/MLIRSmith/llvm/include/llvm/Support/Casting.h:572: decltype(auto) llvm::cast(From&) [with To = mlir::IntegerAttr; From = mlir::Attribute]: Assertion `isa<To>(Val) && "cast<Ty>() argument of incompatible type!"' failed.
PLEASE submit a bug report to https://github.com/llvm/llvm-project/issues/ and include the crash backtrace.
Stack dump:
0.	Program arguments: ../build/bin/mlir-opt --test-affine-loop-unswitch --test-math-polynomial-approximation --convert-gpu-to-rocdl --test-elements-attr-interface --test-gpu-rewrite --test-alias-analysis-extending --convert-bufferization-to-memref --test-pattern-selective-replacement --no-implicit-module --mlir-timing-display=list generated/temp41354756394754015488.mlir
Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):
0  mlir-opt        0x00005564dc257bdb llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) + 59
1  mlir-opt        0x00005564dc2549cc
2  libpthread.so.0 0x00007f7457b89980
3  libc.so.6       0x00007f74567b6e87 gsignal + 199
4  libc.so.6       0x00007f74567b87f1 abort + 321
5  libc.so.6       0x00007f74567a83fa
6  libc.so.6       0x00007f74567a8472
7  mlir-opt        0x00005564de828782
8  mlir-opt        0x00005564de82da74
9  mlir-opt        0x00005564de82f4fc
10 mlir-opt        0x00005564de8286a9
11 mlir-opt        0x00005564de82e505
12 mlir-opt        0x00005564de9cf301 mlir::detail::OpToOpPassAdaptor::run(mlir::Pass*, mlir::Operation*, mlir::AnalysisManager, bool, unsigned int) + 1297
13 mlir-opt        0x00005564de9d0223
14 mlir-opt        0x00005564de9d08c1 mlir::PassManager::run(mlir::Operation*) + 1153
15 mlir-opt        0x00005564de9c0efc
16 mlir-opt        0x00005564de9c28b5
17 mlir-opt        0x00005564de9c2a71
18 mlir-opt        0x00005564deac8260 mlir::splitAndProcessBuffer(std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::function_ref<mlir::LogicalResult (std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::raw_ostream&)>, llvm::raw_ostream&, bool, bool) + 96
19 mlir-opt        0x00005564de9bbbc9 mlir::MlirOptMain(llvm::raw_ostream&, std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, mlir::DialectRegistry&, mlir::MlirOptMainConfig const&) + 185
20 mlir-opt        0x00005564de9c2d9a mlir::MlirOptMain(int, char**, llvm::StringRef, mlir::DialectRegistry&) + 746
21 mlir-opt        0x00005564dc1aa0c5 main + 165
22 libc.so.6       0x00007f7456799c87 __libc_start_main + 231
23 mlir-opt        0x00005564dc22b95a _start + 42
Aborted
